Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -74,7 +74,8 @@
     opacity: 0;
 }
 
-.headers h1 {
+.headers h1,
+.phone span {
     font-size: 7rem;
     color: var(--orange);
 }
@@ -117,14 +118,6 @@
 
 .phone {
     opacity: 0;
-}
-
-.phone span {
-    width: fit-content;
-    font-size: 7rem;
-    color: var(--orange);
-    -webkit-text-fill-color: var(--orange);
-    -webkit-text-size-adjust: 100%;
 }
 
 
